# sp500-strategies

./: .gitignore  CONTRIBUTING.md  README.md  learning_objectives.md  pyproject.toml
results/backtest/: report.md  results.csv
results/cross-validation/: ml_metrics_train.csv  top_10_feature_importance.csv
results/selected-model/: selected_model.pkl  selected_model.txt
scripts/: backtest.py  create_signal.py  features_engineering.py  gridsearch.py  indicators.py  model_selection.py
